# opengl-template

./: CMakeLists.txt  TODO.txt  build.sh  imgui.ini  run.sh  settings.toml
include/: Application.h  Camera.h  Input.h  Mesh.h  PrimitiveFactory.h  Renderer.h  ResourceManager.h  SceneObject.h  Settings.h  Shader.h  Texture.h  Time.h  Window.h
include/audio/: AudioEngine.h
include/core/: AppEvent.h  Application.h  EventDispatcher.h  Input.h  KeyEvent.h  ScriptingContext.h  Settings.h  Time.h  Window.h
include/core/events/: AppEvent.h  Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h
include/graphics/: BackgroundRenderer.h  CanvasRenderer.h  IRenderer.h  Mesh.h  PointCloud.h  Renderer.h  SceneRenderer.h  Shader.h
include/graphics/fractal/: AffineFractal.h
include/graphics/renderers/: CanvasRenderer.h  ComputeRenderer.h  GraphicsRenderer.h  IRenderer.h  PointCloudRenderer.h  SceneRenderer.h
include/scene/: AudioReactiveComponent.h  CameraComponent.h  Component.h  FractalComponent.h  IfsFractalComponent.h  PhyllotaxisComponent.h  PropertyAnimatorComponent.h  RotationComponent.h  Scene.h  SceneObject.h  TransformComponent.h
include/utils/: DebugConsole.h  Log.h  ResourceManager.h  ScriptingManager.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
scripts/: empty.lua  runtime_settings.lua  scene.lua
shaders/: background.frag  box_test.frag  canvas.frag  canvas.vert  canvas_alt.frag  ifs_fractal.comp  point_cloud.frag  point_cloud.vert  points.frag  points.vert  post.frag  post.vert  shader.frag  shader.vert  shader_instanced.vert  texture_compute.comp  vibration.comp
src/: Application.cpp  Camera.cpp  Input.cpp  Mesh.cpp  PrimitiveFactory.cpp  Renderer.cpp  ResourceManager.cpp  Settings.cpp  Shader.cpp  Texture.cpp  Time.cpp  Window.cpp  main.cpp
src/audio/: AudioEngine.cpp
src/core/: Application.cpp  EventDispatcher.cpp  Input.cpp  Settings.cpp  Time.cpp  Window.cpp
src/core/events/: EventDispatcher.cpp
src/graphics/: BackgroundRenderer.cpp  CanvasRenderer.cpp  Mesh.cpp  PointCloud.cpp  Renderer.cpp  SceneRenderer.cpp  Shader.cpp  Texture.cpp
src/graphics/fractal/: AffineFractal.cpp
src/graphics/renderers/: CanvasRenderer.cpp  ComputeRenderer.cpp  GraphicsRenderer.cpp  PointCloudRenderer.cpp  SceneRenderer.cpp
src/scene/: AudioReactiveComponent.cpp  Camera.cpp  CameraComponent.cpp  FractalComponent.cpp  IfsFractalComponent.cpp  PhyllotaxisComponent.cpp  PropertyAnimatorComponent.cpp  RotationComponent.cpp  Scene.cpp  SceneObject.cpp  TransformComponent.cpp
src/utils/: DebugConsole.cpp  Log.cpp  ResourceManager.cpp  ScriptingManager.cpp
